kubernetes/apps/homeassistant/app/ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-private
  namespace: homeassistant
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - homeassistant.homelab-peej.dev
      secretName: homeassistant-internal-tls-secret
  rules:
    - host: homeassistant.homelab-peej.dev
      http:
        paths:
          - backend:
              service:
                name: homeassistant
                port:
                  number: 8123
            path: /
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zwave-private
  namespace: homeassistant
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - zwave.homelab-peej.dev
      secretName: zwave-internal-tls-secret
  rules:
    - host: zwave.homelab-peej.dev
      http:
        paths:
          - backend:
              service:
                name: homeassistant
                port:
                  number: 8091
            path: /
            pathType: Prefix
